<resources>
    <string name="app_name">Hello Android</string>
    <string name="app_test">Hello guys</string>'
    <string name="header_title">Resources App</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="im_a_new_user">I\'m a new user.</string>
    <string name="unknown">unknown</string>
    <string name="onboarding1">Fastest Payment in the world</string>
    <string name="onboarding2">Integrate multiple payments methods to help you up the process quickly</string>
    <string name="next">Next</string>
    <string name="onboarding3">The most secure platform for customer</string>
    <string name="onboarding4">Built-in Fingerprint, face recognition and more, keeping you completely safe</string>
    <string name="onboarding5">Paying for Everything is Easy and Convenient</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
</resources>
