<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Onboarding1">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="584dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="255dp"
            app:srcCompat="@drawable/onboarding1"
            android:contentDescription="@string/onboarding1"
            />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/slide1"
            android:contentDescription="@string/onboarding1"
            />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:text="@string/onboarding1"
            android:textAlignment="center"
            android:textColor="@color/primaryFontColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="50dp"
            android:paddingEnd="80dp"
            android:text="@string/onboarding2"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/next"
            android:textColor="#FFF"
            android:background="@drawable/shape_of_button"
            app:backgroundTint="@null"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>