<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/emailTextField"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="121dp"
        android:layout_height="49dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="269dp"
        android:layout_marginBottom="594dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/primaryFontColor"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="368dp"
        android:layout_height="185dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="389dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="264dp"
            android:text="@string/email_address"
            android:textColor="@color/span_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="331dp"
            android:layout_height="40dp"
            android:layout_marginStart="14dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/span_color"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/unknown"
            android:textColor="@color/primaryFontColor"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.376"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/span_color"
            android:text="@string/password"
            android:textColor="@color/span_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userEmail" />

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="331dp"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/unknown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.378"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.889" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="356dp"
        android:layout_height="42dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/shape_of_button"
        android:drawablePadding="90dp"
        android:paddingStart="136dp"
        android:paddingTop="2dp"
        android:paddingEnd="136dp"
        android:paddingBottom="2dp"
        android:textColor="#fff"
        android:onClick="signIn"
        android:text="@string/sign_in"
        app:backgroundTint="@null"
        app:iconPadding="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.006" />

    <Button
        android:id="@+id/goToGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="243dp"
        android:onClick="google"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitButton" />

    <ListView
        android:id="@+id/listTest"
        android:layout_width="351dp"
        android:layout_height="183dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToGoogle" />


</androidx.constraintlayout.widget.ConstraintLayout>